# alara-drone

./: GEMINI.md  README.md  System.cc  docker-compose.yml  find_method.cs
broker/: Dockerfile  broker.py
client/: check_layout.gd  check_layout.gd.uid  client.csproj  client.sln  gd_path.txt  project.godot  test.gd  test.gd.uid  test2.gd  test2.gd.uid  test3.gd  test3.gd.uid  test4.gd  test4.gd.uid
client/scenes/: depth_feed.tscn  feed.tscn  main.tscn  points.gdshader  points.gdshader.uid  points.glsl  points.glsl.import  rgb_feed.tscn  world.tscn
client/scripts/: ArmedStateLabel.cs  ArmedStateLabel.cs.uid  AttitudeVisualiser.cs  AttitudeVisualiser.cs.uid  DepthFeed.cs  DepthFeed.cs.uid  Drone.cs  Drone.cs.uid  Feed.cs  Feed.cs.uid  FpsLabel.cs  FpsLabel.cs.uid  HeadingVisualiser.cs  HeadingVisualiser.cs.uid  IpLabel.cs  IpLabel.cs.uid  KeybindsPanel.cs  KeybindsPanel.cs.uid  LateralVectorVisualiser.cs  Main.cs  Main.cs.uid  Player.cs  Player.cs.uid  RGBFeed.cs  RGBFeed.cs.uid  TestMultiMesh.cs  TestMultiMesh.cs.uid  ThrottleVisualiser.cs  ThrottleVisualiser.cs.uid  World.cs  World.cs.uid
drone/: camera.py  fc.py  geiger.py  ip.py
dronesim/indoor_drone_sim/: README.md  package.xml  setup.cfg  setup.py
dronesim/indoor_drone_sim/config/: slam_toolbox.yaml
geiger/: Dockerfile  geigercalc.py  networking.py  tempvisualizer.py
reconstruction/: CMakeLists.txt  Dockerfile  reconstruction.cpp
services/: camera.service  fc.service  geiger.service  ip.service
trajectory/: CMakeLists.txt  Dockerfile  settings.yaml  trajectory.cpp
(+8 files in other folders)
